# SoshalThingYew

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  Trunk.toml  change_hashes.nim  content-script.js  cypress.json  index.html  manifest.json  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml
cypress/fixtures/: tweet_one_image.json  tweet_one_url.json
cypress/integration/: spec.js
extension/: content-script.js  manifest.json
public/: site.webmanifest
server/: Cargo.toml
server/src/: main.rs
soshalthing_macros/: Cargo.toml
soshalthing_macros/src/: lib.rs
src/: add_timeline.rs  articles.rs  choose_endpoints.rs  containers.rs  dropdown.rs  egg_mode.rs  endpoints.rs  error.rs  favviewer.js  favviewer.rs  lib.rs  main.rs  notifications.rs  pixiv.rs  sidebar.rs  timeline.rs  twitter.rs
src-tauri/: tauri.conf.json
src/articles/: component.rs  fetch_agent.rs  gallery.rs  media_load_queue.rs  mod.rs  social.rs
src/components/: dropdown.rs  font_awesome.rs  mod.rs
src/favviewer/: mod.rs  pixiv.rs
src/modals/: add_timeline.rs  batch_action.rs  change_timeline_endpoint.rs  choose_endpoint.rs  mod.rs  modal_agent.rs  settings.rs
src/sass/: _article.sass  _container.sass  _core.sass  _galleryArticle.sass  _sidebar.sass  _socialArticle.sass  _timeline.sass  index.sass  partial-index.sass
src/services/: article_actions.rs  endpoint_agent.rs  endpoints.rs  mod.rs  pixiv.rs  storages.rs
src/services/dummy_service/: mod.rs
src/services/pixiv/: article.rs  endpoints.rs  mod.rs
src/services/twitter/: article.rs  endpoints.rs  mod.rs
src/services/youtube/: article.rs  endpoints.rs  mod.rs
src/settings/: agent.rs  component.rs  mod.rs
src/sidebar/: endpoint_options.rs  mod.rs  ratelimits.rs
src/timeline/: agent.rs  autoscroll.rs  containers.rs  filters.rs  mod.rs  sort_methods.rs  timeline_container.rs
src/timeline/containers/: masonry.rs  mod.rs
tests/: mod.rs  soshalthing.spec.js  spec.js  twitter.spec.js
tests/fixtures/: tweet_ampersand_emoji_url.json  tweet_media_text.json  tweet_text_hashtags_url.json  tweet_text_url.json
utils/: Cargo.toml
