[package]
name = "soshalthing-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "server",
    "src-tauri"
]

[dependencies]
yew = "0.19.3"
yew-agent = "0.1.0"
yewtil = { version = "0.4.0", features = ["future"] }
gloo-utils = "0.1.1"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = [
    "HtmlHeadElement",
    "UrlSearchParams",
    "HtmlCollection",
    "AddEventListenerOptions",
    "ScrollToOptions",
    "ScrollBehavior",
    "HtmlVideoElement",
] }
js-sys = "0.3.55"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0"
serde = "1.0.130"
log = "0.4.14"
wasm-logger = "0.2.0"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
gloo-storage = "0.2.0"