[package]
name = "soshalthing"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "utils",
    "soshalthing_macros"
]

[features]
dummy_service = []

[dependencies]
soshalthing_macros = { path = "soshalthing_macros" }
yew = "0.19"
yew-agent = "0.1"
yewtil = { version = "0.4", features = ["future"] }
gloo-utils = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlHeadElement",
    "UrlSearchParams",
    "HtmlCollection",
    "AddEventListenerOptions",
    "ScrollToOptions",
    "ScrollBehavior",
    "HtmlVideoElement",
    "Navigator",
] }
js-sys = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = "1.0"
log = "0.4"
wasm-logger = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
gloo-storage = "0.2"
gloo-timers = "0.2"
derivative = "2.2"
html-escape = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"