[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-files = "0.6.0-beta.10"
actix-cors = "0.6.0-beta.5"
actix-http = "3.0.0-beta.15"
actix-session = "0.5.0-beta.5"
actix-service = "2.0.1"
actix-identity = "0.4.0-beta.5"
egg-mode = "0.16"
serde_json = "1.0"
serde = "1.0.130"
env_logger = "0.9.0"
mime = "0.3.16"
log = "0.4.14"