[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-session = "0.5.0"
actix-service = "2.0.2"
actix-identity = "0.4.0"
egg-mode = "0.16"
serde_json = "1.0"
serde = "1.0.130"
mime = "0.3.16"
log = "0.4.14"
simplelog = "0.11.2"
rand = "0.8.4"
youtube-api = { git = "https://github.com/maxjoehnk/youtube-rs.git" }